# myDiscord

./: CMakeLists.txt  README.md  myDiscord.sql  mydiscord.db  socket_serveur.c  test.c
client/include/: ui.h  ui_callback.h  ui_callbacks.h  validation.h
client/src/: main.c  ui.c  ui_callback.c  ui_callbacks.c  ui_test.c  validation.c
include/: app.h  crypto.h  database.h  gui.h  network.h  utils.h
server/include/: config.h  crypto.h  db.h
server/src/: crypto.c  db.c  socket_server.c  socket_serveur.c
server_main/: main_server.c
sql/: database.sql  mydiscord.db
src/: app.c  crypto.c  database.c  gui.c  main.c  network.c  server.c  test_db.c  utils.c
